--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,6 +3,9 @@
   body {
     @apply bg-neutral-50;
   }
+  .btn {
+    @apply bg-neutral-100 hover:bg-neutral-200 rounded-md px-4 p-2 cursor-pointer;
+  }
   .db-head {
     @apply text-left font-normal text-sm px-2 py-4;
   }
@@ -19,6 +22,15 @@
     @apply px-2 py-4 align-middle text-sm;
   }
   .tag {
-    @apply text-xs bg-neutral-100 rounded-md py-1 px-2 flex justify-center items-center uppercase;
+    @apply text-xs bg-neutral-200 hover:bg-neutral-300 rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
+  }
+  .tag path {
+    @apply fill-neutral-900;
+  }
+  .tag-active {
+    @apply text-xs bg-neutral-500 text-white rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
+  }
+  .tag-active path {
+    @apply fill-neutral-100;
   }
 }
