--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -22,7 +22,7 @@
     @apply px-2 py-4 align-middle text-sm;
   }
   .tag {
-    @apply text-xs bg-neutral-200 hover:bg-neutral-300 rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
+    @apply text-xs bg-neutral-200 hover:bg-neutral-300 rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2 whitespace-nowrap;
   }
   .tag path {
     @apply fill-neutral-900;
