--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,22 +4,28 @@
     @apply bg-neutral-50;
   }
   .btn {
-    @apply bg-neutral-200 hover:bg-neutral-300 rounded-md px-4 p-2 cursor-pointer;
+    @apply bg-neutral-200 hover:bg-neutral-300 rounded-md px-4 p-2 cursor-pointer whitespace-nowrap;
   }
   .db-head {
     @apply text-left font-normal text-sm px-2 py-4;
   }
   .db-col-sm {
-    @apply w-[127px];
+    @apply min-w-[127px] lg:min-w-[127px];
   }
   .db-col-md {
-    @apply w-[270px];
+    @apply min-w-[270px] lg:min-w-[270px];
   }
   .db-col-lg {
-    @apply w-[400px];
+    @apply min-w-[300px] lg:min-w-[400px];
   }
   .db-cell {
     @apply px-2 py-4 align-middle text-sm;
+  }
+  .modal {
+    @apply fixed right-2 lg:right-4 top-2 lg:top-4 bottom-2 lg:bottom-4 left-2 lg:left-auto lg:w-2/5 bg-white rounded-md p-8 overflow-auto z-50;
+  }
+  .nav-text-later {
+    @apply text-base flex flex-row gap-4 items-center text-neutral-400 cursor-not-allowed whitespace-nowrap;
   }
   .tag {
     @apply text-xs bg-neutral-200 hover:bg-neutral-300 rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2 whitespace-nowrap;
