--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,10 +2,10 @@
 
 @layer components {
   body {
-    @apply bg-neutral-50;
+    @apply bg-stone-900;
   }
   .btn {
-    @apply bg-neutral-200 hover:bg-neutral-300 rounded-md px-4 p-2 cursor-pointer whitespace-nowrap;
+    @apply bg-stone-800 hover:bg-stone-700 text-stone-200 rounded-md px-4 p-2 cursor-pointer whitespace-nowrap;
   }
   .db-head {
     @apply text-left font-normal text-sm px-2 py-4;
@@ -23,19 +23,25 @@
     @apply px-2 py-4 align-middle text-sm truncate;
   }
   .modal {
-    @apply fixed right-2 lg:right-4 top-2 lg:top-4 bottom-2 lg:bottom-4 left-2 lg:left-auto lg:w-2/5 bg-white rounded-md p-8 overflow-auto z-50;
+    @apply fixed right-2 lg:right-4 top-2 lg:top-4 bottom-2 lg:bottom-4 left-2 lg:left-auto lg:w-2/5 bg-stone-900 ring-1 ring-stone-800 text-stone-400 rounded-md p-8 overflow-auto z-50;
   }
-  .nav-text-later {
-    @apply text-base flex flex-row gap-4 items-center text-neutral-400 cursor-not-allowed whitespace-nowrap;
+  .nav-header {
+    @apply text-stone-400 uppercase text-xs tracking-wider;
+  }
+  .nav-link {
+    @apply text-base text-stone-300 hover:text-stone-200;
+  }
+  .nav-link-later {
+    @apply text-base flex flex-row gap-4 items-center text-stone-600 cursor-not-allowed whitespace-nowrap;
   }
   .tag {
-    @apply text-xs bg-neutral-200 hover:bg-neutral-300 rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2 whitespace-nowrap;
+    @apply text-xs bg-stone-800 hover:bg-stone-700 text-stone-300 rounded-sm py-0.5 px-2 flex justify-center items-center uppercase gap-2 whitespace-nowrap;
   }
   .tag path {
-    @apply fill-neutral-900;
+    @apply fill-stone-900;
   }
   .tag-active {
-    @apply text-xs bg-neutral-500 text-white rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
+    @apply text-xs bg-stone-500 text-white rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
   }
   .tag-active path {
     @apply fill-neutral-100;
