Refactor UI components for improved dark mode consistency
- Updated background and border colors in app.vue, AdminResourceManager.vue, and SubmitResource.vue to align with dark mode aesthetics.
- Replaced neutral colors with stone colors for better contrast and readability.
- Modified button styles and hover effects to enhance user experience in dark mode.
- Adjusted SearchFilter.vue to replace an image with an SVG for better scalability and design consistency.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -44,13 +44,13 @@
     @apply text-xs bg-stone-500 text-white rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
   }
   .tag-active path {
-    @apply fill-neutral-100;
+    @apply fill-stone-100;
   }
   .drag-over {
-    @apply border-neutral-400 border-2 border-dashed;
+    @apply border-stone-800 hover:border-stone-700 border-1 border-dashed;
   }
   .image-drop-zone-active {
-    @apply bg-neutral-200;
+    @apply bg-stone-700;
   }
   .pending-resource {
     @apply bg-amber-500 text-amber-900;
