--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,10 +2,10 @@
 
 @layer components {
   body {
-    @apply bg-stone-900;
+    @apply bg-neutral-900;
   }
   .btn {
-    @apply bg-stone-800 hover:bg-stone-700 text-stone-200 rounded-md px-4 p-2 cursor-pointer whitespace-nowrap;
+    @apply bg-neutral-800 hover:bg-neutral-700 text-neutral-200 rounded-md px-4 p-2 cursor-pointer whitespace-nowrap;
   }
   .db-head {
     @apply text-left font-normal text-sm px-2 py-4;
@@ -23,37 +23,37 @@
     @apply px-2 py-4 align-middle text-sm truncate;
   }
   .modal {
-    @apply fixed right-2 lg:right-4 top-2 lg:top-4 bottom-2 lg:bottom-4 left-2 lg:left-auto lg:w-2/5 bg-stone-900 ring-1 ring-stone-800 text-stone-400 rounded-md p-8 overflow-auto z-50;
+    @apply fixed right-2 lg:right-4 top-2 lg:top-4 bottom-2 lg:bottom-4 left-2 lg:left-auto lg:w-2/5 bg-neutral-900 ring-1 ring-neutral-800 text-neutral-400 rounded-md p-8 overflow-auto z-50;
   }
   .nav-header {
-    @apply text-stone-400 uppercase text-xs tracking-wider;
+    @apply text-neutral-400 uppercase text-xs tracking-wider;
   }
   .nav-link {
-    @apply text-base text-stone-300 hover:text-stone-200;
+    @apply text-base text-neutral-300 hover:text-neutral-200;
   }
   .nav-link-later {
-    @apply text-base flex flex-row gap-4 items-center text-stone-600 cursor-not-allowed whitespace-nowrap;
+    @apply text-base flex flex-row gap-4 items-center text-neutral-600 cursor-not-allowed whitespace-nowrap;
   }
   .nav-link-later .tag {
-    @apply text-stone-700 hover:bg-stone-800;
+    @apply text-neutral-700 hover:bg-neutral-800;
   }
   .tag {
-    @apply text-xs bg-stone-800 hover:bg-stone-700 text-stone-300 rounded-sm py-0.5 px-2 flex justify-center items-center uppercase gap-2 whitespace-nowrap;
+    @apply text-xs bg-neutral-800 hover:bg-neutral-700 text-neutral-300 rounded-sm py-0.5 px-2 flex justify-center items-center uppercase gap-2 whitespace-nowrap;
   }
   .tag path {
-    @apply fill-stone-900;
+    @apply fill-neutral-900;
   }
   .tag-active {
-    @apply text-xs bg-stone-500 text-white rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
+    @apply text-xs bg-neutral-500 text-white rounded-md py-1 px-2 flex justify-center items-center uppercase gap-2;
   }
   .tag-active path {
-    @apply fill-stone-100;
+    @apply fill-neutral-100;
   }
   .drag-over {
-    @apply border-stone-800 hover:border-stone-700 border-1 border-dashed;
+    @apply border-neutral-800 hover:border-neutral-700 border-1 border-dashed;
   }
   .image-drop-zone-active {
-    @apply bg-stone-700;
+    @apply bg-neutral-700;
   }
   .pending-resource {
     @apply bg-amber-500 text-amber-900;
