Refactor app.vue and update Nuxt configuration for improved authentication and resource management
- Introduced conditional rendering in app.vue to display the main content only after initialization.
- Updated authentication handling to utilize Supabase for user sign-in and sign-up processes.
- Enhanced resource management by refactoring methods for fetching and deleting resources.
- Removed Netlify Identity integration and streamlined authentication logic to focus on Supabase.
- Updated Nuxt configuration to improve routing and PostCSS setup, including the addition of postcss-import and postcss-nesting.
- Cleaned up unused files and dependencies related to Netlify Identity.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -56,9 +56,10 @@
     @apply bg-neutral-700;
   }
   .pending-resource {
-    @apply bg-amber-500 text-amber-900;
-    .tag, .btn {
-      @apply bg-amber-600 text-amber-900;
-    }
+    @apply bg-amber-500/5;
+  }
+  .pending-resource .tag, 
+  .pending-resource .btn {
+    @apply bg-amber-600 text-amber-900;
   }
 }
