--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -23,7 +23,10 @@
     @apply px-2 py-4 align-middle text-sm truncate;
   }
   .modal {
-    @apply fixed right-2 lg:right-2 top-2 lg:top-2 bottom-2 lg:bottom-2 left-2 lg:left-auto lg:w-2/5 bg-neutral-900 ring-1 ring-neutral-800 text-neutral-400 rounded-md p-8 overflow-auto z-50;
+    @apply fixed right-2 lg:right-2 top-2 lg:top-2 bottom-2 lg:bottom-2 left-2 lg:left-auto lg:w-2/5 bg-neutral-900 ring-1 ring-neutral-800 text-neutral-400 rounded-md overflow-auto z-50;
+  }
+  .modal-content {
+    @apply p-8 h-full;
   }
   .nav-header {
     @apply text-neutral-400 uppercase text-xs tracking-wider;
