Enhance layout and functionality of various components
- Added grid layout for track display in TracksTable for improved organization.
- Updated Nav component to conditionally render links based on user authentication.
- Improved Player component to track if a track has ever been loaded.
- Adjusted SearchFilter component height for better visual consistency.
- Refined user profile page layout for better presentation of profile information.

--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -65,4 +65,12 @@
   .pending-resource .btn {
     @apply bg-amber-600 text-amber-900;
   }
+  .trackGrid {
+    @apply grid gap-4;
+    grid-template-columns: 40px 2fr 1.5fr 1fr 1.5fr 1fr 80px 100px;
+  }
+  .trackGrid-edit {
+    @apply grid gap-4;
+    grid-template-columns: 40px 2fr 1.5fr 1fr 1.5fr 1fr 80px 100px 80px;
+  }
 }
