--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -67,10 +67,10 @@
     @apply bg-amber-600 text-amber-900;
   }
   .trackGrid {
-    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_150px_100px_100px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px];
+    @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_150px_150px_100px_100px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px];
   }
   .trackGrid-edit {
-    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_150px_100px_100px_50px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px_80px];
+    @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_150px_150px_100px_100px_50px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px_80px];
   }
   .collectionTrackGrid {
     @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_150px_100px_100px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px];
