--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -73,13 +73,13 @@
     @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_150px_120px_150px_100px_100px_50px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1.5fr_1fr_1fr_80px_100px_80px];
   }
   .collectionTrackGrid {
-    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_150px_100px_100px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px];
+    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_120px_150px_100px_100px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_1fr_80px_100px];
   }
   .collectionTrackGrid-edit {
-    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_150px_100px_100px_50px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_80px_100px_80px];
+    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_120px_150px_100px_100px_50px_50px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1.5fr_1fr_1fr_80px_100px_80px_80px];
   }
   .collectionTrackGrid-loggedOut {
-    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_150px_100px_100px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1fr_80px_100px];
+    @apply grid gap-4 grid-cols-[40px_150px_150px_100px_120px_150px_100px_100px] lg:grid-cols-[40px_2fr_1.5fr_1fr_1fr_1fr_80px_100px];
   }
   .resourceGrid {
     @apply grid gap-4 items-center *:first:pl-4 grid-cols-[300px_127px_127px_127px_127px_127px_127px] lg:grid-cols-[320px_127px_127px_127px_1fr_127px_127px];
