--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -70,7 +70,7 @@
     @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_150px_120px_150px_100px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1.5fr_1fr_1fr_80px];
   }
   .trackGrid-no-collection {
-    @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_120px_150px_100px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1fr_1fr_80px];
+    @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_120px_150px_100px_80px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1fr_1fr_80px_80px];
   }
   .trackGrid-edit {
     @apply grid gap-4 grid-cols-[minmax(70px,auto)_150px_150px_100px_150px_120px_150px_100px_100px_50px] lg:grid-cols-[minmax(70px,auto)_2fr_1.5fr_1fr_1.5fr_1fr_1fr_80px_100px_80px];
