--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -87,13 +87,13 @@
     animation: search-highlight-pulse 2s ease-out;
   }
   .trackGrid {
-    @apply grid gap-4 grid-cols-[minmax(70px,auto)_minmax(250px,1fr)_100px_70px_120px_70px_50px_70px] lg:grid-cols-[minmax(70px,auto)_minmax(200px,3fr)_1.5fr_1fr_1.5fr_70px_50px_80px];
+    @apply grid gap-4 grid-cols-[minmax(70px,auto)_minmax(250px,1fr)_100px_70px_minmax(140px,max-content)_70px_50px_70px] lg:grid-cols-[minmax(70px,auto)_minmax(200px,3fr)_1.5fr_1fr_minmax(140px,1.5fr)_70px_50px_80px];
   }
   .trackGrid-no-collection {
     @apply grid gap-4 grid-cols-[minmax(70px,auto)_minmax(250px,1fr)_100px_70px_70px_50px_70px_80px] lg:grid-cols-[minmax(70px,auto)_minmax(200px,3fr)_1.5fr_1fr_70px_50px_80px_80px];
   }
   .trackGrid-edit {
-    @apply grid gap-4 grid-cols-[minmax(70px,auto)_minmax(250px,1fr)_100px_70px_120px_70px_50px_70px_100px_80px] lg:grid-cols-[minmax(70px,auto)_minmax(200px,3fr)_1.5fr_1fr_1.5fr_70px_50px_80px_100px_80px];
+    @apply grid gap-4 grid-cols-[minmax(70px,auto)_minmax(250px,1fr)_100px_70px_minmax(140px,max-content)_70px_50px_70px_100px_80px] lg:grid-cols-[minmax(70px,auto)_minmax(200px,3fr)_1.5fr_1fr_minmax(140px,1.5fr)_70px_50px_80px_100px_80px];
   }
   .trackGrid-edit-no-collection {
     @apply grid gap-4 grid-cols-[minmax(70px,auto)_minmax(250px,1fr)_100px_70px_70px_50px_70px_80px] lg:grid-cols-[minmax(70px,auto)_minmax(200px,3fr)_1.5fr_1fr_70px_50px_80px_80px];
